--- a/jsValidate/index.html
+++ b/jsValidate/index.html
@@ -3,6 +3,15 @@
  <head>
   <meta charset="UTF-8" />  
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+  <style type="text/css">
+    #addForm label.error {
+        color: Red;
+        font-size: 13px;
+        margin-left: 5px;
+        padding-left: 16px;
+        background: url("error.png") left no-repeat;
+    }
+</style>
  </head> 
  <body> 
   <form id="example_form" method="get" action=""> 
