--- a/pointToPlane/preview/mydocument.html
+++ b/pointToPlane/preview/mydocument.html
@@ -129,7 +129,7 @@ pause
 <h1 id="github-ssh-key">github生成ssh的key</h1>
 <p>1.打开<strong>Git Bash</strong>，在控制台中输入以下命令:</p>
 <pre><code class="lang-bash"># 邮箱是github账号的邮箱,输入命令后一直回车即可不用输入命令
-ssh-keygen -t rsa -C &quot;youremail@example.com&quot;
+ssh-keygen -t rsa -C &quot;lll_tony@163.com&quot;
 </code></pre>
 <p>2.在Windows下查看<strong>[c盘-&gt;用户-&gt;自己的用户名-&gt;.ssh]</strong>下是否有<em>&quot;id_rsa、id_rsa.pub&quot;</em>文件</p>
 <p>3.登录Github。打开setting-&gt;SSH keys，点击右上角 New SSH key，把<strong>[c盘-&gt;用户-&gt;自己的用户名-&gt;.ssh]</strong>目录下生成好的公钥<em>&quot;id_rsa.pub&quot;</em>文件以文本打开复制放进 key输入框中</p>
