--- a/pointToPlane/preview/mydocument.html
+++ b/pointToPlane/preview/mydocument.html
@@ -144,6 +144,9 @@ git remote rm origin
 git remote add origin git@github.com:CodingPandaLLL/file.git
 </code></pre>
 <p>注意使用ssh提交的方式需要先在Github中设置好ssh key</p>
+<h1 id="maven-jar-">Maven安装jar到版本</h1>
+<pre><code class="lang-bash">mvn install:install-file -DgroupId=smartbi -DartifactId=smartbi-SDK -Dversion=1.0 -Dpackaging=jar -Dfile=C:\codeSpace\WorkSpace\JavaWeb\smartbi\src\main\resources\lib\smartbi-SDK.jar
+</code></pre>
 
           	</article>
         </div>
