--- a/pointToPlane/preview/mydocument.html
+++ b/pointToPlane/preview/mydocument.html
@@ -147,6 +147,9 @@ git remote add origin git@github.com:CodingPandaLLL/file.git
 <h1 id="maven-jar-">Maven安装jar到版本</h1>
 <pre><code class="lang-bash">mvn install:install-file -DgroupId=smartbi -DartifactId=smartbi-SDK -Dversion=1.0 -Dpackaging=jar -Dfile=C:\codeSpace\WorkSpace\JavaWeb\smartbi\src\main\resources\lib\smartbi-SDK.jar
 </code></pre>
+<h1 id="-rabbitmq">安装RabbitMQ</h1>
+<p><a href="https://www.cnblogs.com/JustinLau/p/11738511.html">安装教程RabbitMQ</a></p>
+<p>注意：erlang官网下载很慢可以用：<a href="https://www.erlang-solutions.com/resources/download.html">https://www.erlang-solutions.com/resources/download.html</a></p>
 
           	</article>
         </div>
